--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github intro</title>
+
 </head>
 <body>
     <h1>Hello world!</h1>
+    <header>
+
+    </header>
 </body>
 </html>
